# Credit-Score_Classification-End2End---English

./: README.md  notebook-experiment.ipynb  requirements.txt  setup.cfg  setup.py
configs/: config.yaml
src/credit/: exception.py  logger.py
src/credit/components/: __init__.py  data_ingestion.py
src/credit/config/: __init__.py  configuration.py
src/credit/constants/: __init__.py
src/credit/entity/: __init__.py  config_entity.py
src/credit/pipeline/: stage_data_ingestion.py
src/credit/utils/: __init__.py  common.py
