[metadata]
license = MIT
license_files= LICENSE
classifier=
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7


[options.package_data]
Credit_cfg = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py
 